<resources>
    <string name="app_name">T-Player</string>
    <string name="folder">folder</string>
    <string name="grating">T-player</string>
    <string name="folderTop">Folders</string>
    <string name="rotate_displaye">rotate displaye</string>
    <string name="display_scal">Display scal</string>
    <string name="zoom">ZOOM</string>
    <string name="fillToScreen">FILL TO SCREEN</string>
    <string name="stretched">STRETCHED</string>
    <string name="hundred">100%</string>
    <string name="width">WIDTH FIT</string>
    <string name="track_selection_title">Select tracks and subs</string>
    <string name="shared_value_file">shared_value_1</string>
    <string name="subtitle">Subtitle</string>
    <string name="videoname">videoName</string>
    <string name="back_to_home">back to home</string>
    <string name="submit">button</string>
    <string name="focus_mode">Focus Mode</string>
    <string name="settings">settings</string>
    <string name="option_1">Settings</string>
    <string name="option_2">About</string>
    <string name="option_3">Exit</string>

    <string name="createdby">Created By</string>
    <string name="Mehedi">A T MEHEDI HASSAN</string>
    <string name="t_player_1_0">T-PLAYER 1.0</string>
    <string name="shared_value_focus">shared_value_focus_1</string>
    <string name="exit_from_the_t_player">EXIT FROM THE T-PLAYER</string>
    <string name="exit">exit</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="about_the_app"><u>About The App</u></string>
    <string name="name_t_player">Name:-T-Player</string>
    <string name="version_1_0">Version:- 0.40</string>
    <string name="developer_a_t_mehedi_hassan">Developer:-A T Mehedi Hassan</string>
    <string name="unlock">unlock</string>
    <string name="_30">+30</string>
    <string name="brightnesslevel">brightnessLevel</string>
    <string name="rewinding">rewinding</string>
    <string name="__30">-30</string>
    <string name="refresh">refresh</string>
    <string name="logo">logo</string>
    <string name="speedx1">1X</string>
    <string name="speed125">1.25X</string>
    <string name="speed15">1.5X</string>
    <string name="speed17">1.75X</string>
    <string name="speed2">2X</string>
    <string name="Tmsg">something wrong</string>
    <string name="speed025">0.25X</string>
    <string name="speed05">0.5X</string>
    <string name="change_folder_icon">Change Folder Icon</string>
    <string name="change_background_color">Change background Color</string>
    <string name="change_theme_color">Change Theme Color</string>
    <string name="select_folder_icon">SELECT FOLDER ICON</string>
    <string name="ok">OK</string>
    <string name="height">HEIGHT FIT</string>
    <string name="repeat_for_all_media">Repeat for All Media</string>
    <string name="enable_this_to_repeat_each_media">Enable this to repeat each media</string>
    <string name="focusInfo">Enable this to pause player while other app is playing sounds.</string>
    <string name="default_playback_speed">Default playback speed</string>
    <string name="speedAnnounce">Select default media playback speed.</string>
    <string name="wakeMode">Keep screen On/Off</string>
    <string name="wakeLog">Keep screen on while playing videos.</string>
    <string name="decoder">Select default Decoder</string>
    <string name="decInfo">Select deafult decoder for renderer acceleration</string>
    <string name="x">%1$sX</string>
    <string name="r10">-10</string>
    <string name="f10">+10</string>
    <string name="f30">+30</string>
    <string name="r30">-30</string>
    <string name="guesture_tutorial">guesture tutorial</string>
    <string name="sort">Sort Order</string>
    <string name="sortTitle">Sort</string>
    <string name="by_name">Sort By name</string>
    <string name="sort_by_last_modified">Sort By Last modified</string>
    <string name="sort_by_date">Sort By date</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="search">Search</string>
    <string name="my_location">Your  Location data is Loading...</string>
    <string name="my_location1">Give my location and Contact Access !</string>
    <string name="spinner">spinner</string>
    <string name="play_on_background">Play on background</string>
    <string name="play_music_on_backgound">Play Music on backgound</string>
    <string name="backCheck">BackGroundCheck</string>
    <string name="permissions_not_granted">Permissions not granted</string>


</resources>