<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/layout_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg"
                android:padding="10dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/sort"
                    android:textColor="@color/txcolor"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/title"
                    android:background="@color/lineColor2" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <RadioButton
                        android:id="@+id/date1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sort_by_date" />

                    <RadioButton
                        android:id="@+id/nameBy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/by_name"

                        />

                    <RadioButton
                        android:id="@+id/modified"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sort_by_last_modified" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/radioGroup"
                    android:background="@color/lineColor2" />

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/radioGroup">

                    <RadioButton
                        android:id="@+id/asc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ascending" />

                    <RadioButton
                        android:id="@+id/desc1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descending" />

                </RadioGroup>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/radioGroup2">

                    <TextView
                        android:id="@+id/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:layout_toStartOf="@id/apply"
                        android:padding="10dp"
                        android:text="@string/cancel"
                        android:background="@drawable/custom_border"
                        android:textColor="@color/txcolor"

                        />

                    <TextView
                        android:id="@+id/apply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:padding="10dp"
                        android:text="@string/apply"
                        android:background="@drawable/custom_border"
                        android:textColor="@color/txcolor" />

                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>