<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource">

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:cardCornerRadius="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/layout_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/bg">

            <TextView
                android:id="@+id/title"
                android:textColor="@color/txcolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit_from_the_t_player"
                android:layout_centerHorizontal="true"
                />
            <ImageView
                android:layout_below="@id/title"
                android:layout_marginTop="10dp"
                android:id="@+id/image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_exit_to_app_24"
                android:contentDescription="@string/exit"
                />
            <TextView

                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/txcolor"
                android:text="@string/are_you_sure"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/image"
                android:layout_marginStart="10dp"
                />
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_below="@id/image"
               >
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/No"
                   android:text="@string/no"
                  android:layout_toStartOf="@id/Yes"
                   android:layout_marginEnd="30dp"
                   android:textColor="@color/txcolor"

                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/Yes"
                   android:text="@string/yes"
                   android:layout_alignParentEnd="true"

                   />

           </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>